# OpenTake

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  HANDOFF.md  README.ja.md  README.md  README.zh-CN.md
.claude/workflows/: opentake-review.js
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/opentake-agent/: Cargo.toml
crates/opentake-agent/tests/: mcp_http.rs
crates/opentake-core/src/: core.rs  dto.rs  error.rs  session.rs
crates/opentake-domain/src/: lib.rs
crates/opentake-media/src/: lib.rs  timecode.rs
crates/opentake-media/tests/: ffmpeg_integration.rs
crates/opentake-motion/: Cargo.toml
crates/opentake-motion/src/: error.rs  integration.rs  lib.rs  renderer.rs  sandbox.rs  source.rs
crates/opentake-ops/src/: command.rs  intent.rs  lib.rs
crates/opentake-ops/tests/: command_apply.rs  intent_planner.rs
crates/opentake-project/src/: archive.rs  bundle.rs  edl.rs  fcpxml.rs  fcpxml_modern.rs  fcpxml_modern_tests.rs  lib.rs  otio.rs  xmlnode.rs
crates/opentake-render/: Cargo.toml
crates/opentake-render/src/: lib.rs  size.rs  source.rs
crates/opentake-render/src/gpu/: color.rs  compositor.rs  device.rs  mod.rs  shader.wgsl  text_engine.rs  text_raster.rs  texture.rs
crates/opentake-render/src/plan/: affine.rs  build.rs  mod.rs  tests.rs  types.rs
crates/opentake-render/tests/: gpu_smoke.rs  gpu_text.rs
docs/: ADVANCED-FEATURES.md  AGENT-CONTEXT-SIGNAL.md  ARCHITECTURE.md  CAPCUT-GAP.md  EDITING-ENGINE-PLAN.md  FULL_PROJECT_SCAN_REPORT.md  INDEX.md  MODULE-PORT-MAP.md  PORT-1TO1-GAP.md  ROADMAP.md  UNFINISHED-EDITING-AND-MEDIA.md  WORKFLOW-PLUGIN-SYSTEM.md  需求与问题汇总.md
docs/DOS/: EDITING-AUTOMATION-DOS.md  README.md
docs/DOS/EDITING-AUTOMATION/: acceptance-tests.md  agent-editing-suggestions.md  auto-crop-smart-reframe.md  beat-sync-auto-cut.md  workflow-plugin-recipes.md
docs/_analysis/: 02-苹果框架可移植性.md  03-闭源云边界.md  capcut-gap.raw.json  upstream-analysis.raw.json
docs/architecture/: ARCHITECTURE.md  BUGS.md  INDEX.md  PLAYBACK-ENGINE.md  ROADMAP.md
docs/architecture/editing-automation/: EDITING-AUTOMATION-DOS.md  README.md
docs/modules/: INDEX.md
docs/modules/opentake-agent/: AGENT-CONTEXT-SIGNAL.md  INDEX.md  OVERVIEW.md  SPEC.md  WORKFLOW-PLUGIN-SYSTEM.md  context-signal.md  core-handle-convert.md  dispatch-tools.md  mcp-server.md  plugin-system.md  prompt.md
docs/modules/opentake-core/: INDEX.md  OVERVIEW.md  SPEC.md  core-router.md  deps-di.md  dto.md  events-bus.md  session.md
docs/modules/opentake-domain/: INDEX.md  OVERVIEW.md  keyframe-transform.md  media-signal.md  split-subtitle.md  text-grade.md  timeline-model.md
docs/modules/opentake-gen/: INDEX.md  OVERVIEW.md  SPEC.md  catalog.md  client-transport.md  keys-byok.md  params.md  providers.md
docs/modules/opentake-media/: INDEX.md  OVERVIEW.md  analysis.md  decode.md  encode.md  library-index.md  probe-ff.md  semantic-search.md  thumbnail.md  transcribe.md  waveform.md
docs/modules/opentake-motion/: INDEX.md  MOTION-GRAPHICS-PLUGIN.md  OVERVIEW.md  cache.md  integration.md  manifest-source.md  renderer.md  sandbox.md
docs/modules/opentake-ops/: INDEX.md  OVERVIEW.md  command-apply.md  engines.md  intent-id.md  ops-algorithms.md
docs/modules/opentake-project/: INDEX.md  OVERVIEW.md  bundle-archive.md  fcpxml-export.md  gen-log.md  layout.md
docs/modules/opentake-render/: INDEX.md  OVERVIEW.md  gpu-compositor.md  render-plan.md  source-size.md  text-rasterizer.md
docs/modules/src-tauri/: INDEX.md  OVERVIEW.md  commands-ipc.md  export.md  library-media.md  mcp.md  render.md  secret.md  setup-lib.md
docs/modules/web/: INDEX.md  OVERVIEW.md  hooks-i18n-theme.md  ipc-api.md  panels-ui.md  preview-ui.md  state-stores.md  timeline-ui.md
docs/port-map/: account.md  agent.md  app.md  editor.md  export.md  generation.md  help.md  inspector.md  mediapanel.md  models.md  preview.md  project.md  search.md  settings.md  telemetry.md  timeline.md  toolbar.md  transcription.md  ui.md  utilities.md
docs/specs/: agent-SPEC.md  core-SPEC.md  frontend-UI-1to1-SPEC.md  media-SPEC.md  render-SPEC.md
docs/specs/agent/: 0-evidence-index.md  1-mcp-server.md  10-implementation.md  2-tools.md  3-short-id.md  4-execution-shell.md  5-chat.md  6-context-signal.md  7-system-prompt.md  8-core-dispatch.md  9-telemetry.md
docs/specs/core/: 0-design-baseline.md  1-editor-state.md  2-command-routing.md  3-event-bus.md  4-frontend-sync.md  5-assembly.md  6-tauri-commands.md  (+2 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  export.rs  haptic.rs  lib.rs  mcp.rs  media.rs  render.rs  secret.rs
src-tauri/src/playback/: audio.rs  commands.rs  engine.rs  mod.rs  project.rs  resolver.rs  transport.rs
src-tauri/tests/: bundle_export_integration.rs  export_integration.rs  playback_integration.rs  playback_transport_integration.rs
update-summary/: 2026-06-27-ui-refresh.md
web/: package.json
web/src/: App.tsx
(+164 files in other folders)
